--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,5 +4,6 @@
 @import "./componenets/banner.scss";
 @import "./componenets/cases.scss";
 @import "./componenets/intro-overlay";
+@import "./componenets/nav";
 
 
