--- a/src/styles/base/global.scss
+++ b/src/styles/base/global.scss
@@ -19,7 +19,8 @@ body {
 .page-container {
   padding-left: 20px;
   padding-right: 20px; 
-  max-width: 1700px;
+  // max-width: 1700px;
+  max-width: 1200px;
   min-width: 310px;
   margin: 0 auto;
 
