added react router and pages

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,5 +5,5 @@
 @import "./componenets/cases.scss";
 @import "./componenets/intro-overlay";
 @import "./componenets/nav";
-
+@import "./componenets/page";
 
