--- a/src/styles/componenets/_header.scss
+++ b/src/styles/componenets/_header.scss
@@ -1,17 +1,18 @@
 .header {
+  height: 55px;
   position: fixed;
   top: 0;
   width: 100%;
 
+  @media (min-width: 768px) {
+    height: 128px;
+  }
+
   .header-container {
-    height: 55px;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-
-    @media (min-width: 768px) {
-      height: 128px;
-    }
 
     .logo {
       a {
@@ -25,31 +26,54 @@
       }
     }
 
-    .hamburger {
-      width: 15px;
-      height: 15px;
+    .nav-toggle {
+      // background-color: palegoldenrod;
+      position: relative;
       display: flex;
-      flex-direction: column;
+      align-items: center;
       justify-content: center;
       cursor: pointer;
 
-      @media (min-width: 768px) {
-        width: 25px;
-        height: 25px;
-      }
-
-      span {
-        display: block;
-        width: 100%;
-        height: 2px;
-        background-color: black;
-      }
-
-      span:nth-child(2) {
-        margin-top: 3px;
+      .hamburger-menu {
+        width: 15px;
+        height: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
         @media (min-width: 768px) {
-          margin-top: 7px;
+          width: 25px;
+          height: 25px;
+        }
+
+        span {
+          display: block;
+          width: 100%;
+          height: 2px;
+          background-color: black;
+        }
+
+        span:nth-child(2) {
+          margin-top: 3px;
+
+          @media (min-width: 768px) {
+            margin-top: 7px;
+          }
+        }
+      }
+
+      .hamburger-menu-close {
+        position: absolute;
+        display: none;
+
+        svg {
+          width: 45px;
+          height: 45px;
+
+          @media (min-width: 425px) {
+            width: 50px;
+            height: 50px;
+          }
         }
       }
     }
