--- a/src/styles/base/global.scss
+++ b/src/styles/base/global.scss
@@ -6,7 +6,8 @@
 
 html,
 body {
-  // visibility: hidden;`
+  visibility: hidden;
+  background-color: $white;
   font-size: 16px;
   overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -19,8 +20,7 @@ body {
 .container {
   padding-left: 20px;
   padding-right: 20px;
-  // max-width: 1700px;
-  max-width: 1200px;
+  max-width: 1450px;
   min-width: 310px;
   margin: 0 auto;
   height: 100%;
