menu animation code refactoring

--- a/src/styles/componenets/_cases.scss
+++ b/src/styles/componenets/_cases.scss
@@ -1,5 +1,5 @@
 .cases {
-  // was needed for mobile screen
+  // needed for mobile screen
   // to keep the overlay-bottom to be position
   // relevant to the boddom half of body and
   // not the bottom of last case element
